# glib

./: .gitignore
test2/: .gdbinit  .gitignore  Makefile  Makefile.am  README.md  autogen.sh  configure.ac  echo.c  gobject.c  gobject.py  l.l  main.c  parser-yacc.y  scanner-lex.l  scanner.c  test.c  y.y
test2/tests/: parser-01.txt  test-wrapper.sh
